Correct Alignment of Subtitle Flags (Finally)

--- a/gui/slick/css/default.css
+++ b/gui/slick/css/default.css
@@ -400,9 +400,11 @@ input:not(.btn){margin-right:6px;margin-top:5px;padding-top:4px;padding-bottom:4
 }
 
 .sickbeardTable td.subtitles_column {
-  padding-top: 13px;
+  vertical-align: middle;
+  width: 11%;
+/*  padding-top: 13px;
   padding-left: 14px;
-/*  width: 100% */
+  width: 100% */
 }
 
 .sickbeardTable td small {
